Fix incorrect border color on mobile

--- a/pages/global-style.css
+++ b/pages/global-style.css
@@ -549,7 +549,7 @@ nav>.spacer {
   opacity: .5;
   filter: grayscale(1);
   pointer-events: none;
-  --link-underline-color: transparent;
+  border-bottom: 1px solid transparent;
 }
 
 theme-selector {
